# edu_stock_llm

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  FINAL_CLEANUP_REPORT.md  HTML_FIX_REPORT.md  INTEGRATION_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  README.md  SECURITY.md  docker-compose.yml  final_validation_test.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_game.sh  test_html_rendering.py  test_integration.py  test_three_little_pigs.json  validation_test.py
notebook/: langchain.ipynb
src/: api.py  main.py  streamlit_app.py
src/ai/: __init__.py  player_profile.py
src/ai/agents/: __init__.py  mentor_agent.py
src/data/: data_handler.py
src/game/: __init__.py  game_logic.py  session_manager.py
src/models/: llm_handler.py
src/simulation/: __init__.py  simulator.py  simulator_backup.py
src/ui/: __init__.py  components.py  screens.py  styles.py
src/utils/: config.py  file_manager.py  logger.py  prompts.py  validators.py
src/visualization/: visualize.py
tests/: conftest.py  test_api.py  test_data_handler.py  test_logger.py
